--- a/index.html
+++ b/index.html
@@ -632,29 +632,7 @@
                     </div>
                     <div><p>Mongoose</p></div>
                   </div>
-                  <div class="skill">
-                    <div class="svg-icon">
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="3rem"
-                        height="3rem"
-                        viewBox="0 0 15 15"
-                      >
-                        <path
-                          fill="white"
-                          fill-rule="evenodd"
-                          d="M7.869.162a.5.5 0 0 0-.738 0l-2.63 2.87a5.5 5.5 0 0 0-.271 7.115L7 13.673V15h1v-1.327l2.77-3.526a5.5 5.5 0 0 0-.27-7.114zM8 3a.5.5 0 0 0-1 0v7.5a.5.5 0 0 0 1 0z"
-                          clip-rule="evenodd"
-                        />
-                      </svg>
-                    </div>
-                    <div>
-                      <p>
-                        Mongo <br />
-                        Atlas
-                      </p>
-                    </div>
-                  </div>
+
                   <div class="skill">
                     <div class="svg-icon">
                       <svg
@@ -996,6 +974,15 @@
                   </div>
                   <div class="skill">
                     <div class="svg-icon">
+                      <i
+                        class="fa-solid fa-cloud-arrow-up"
+                        aria-hidden="true"
+                      ></i>
+                    </div>
+                    <div><p>UploadThing</p></div>
+                  </div>
+                  <div class="skill">
+                    <div class="svg-icon">
                       <i class="bx bxl-visual-studio" aria-hidden="true"></i>
                     </div>
                     <div>
@@ -1024,27 +1011,7 @@
                       <p>ESLint</p>
                     </div>
                   </div>
-                  <div class="skill">
-                    <div class="svg-icon">
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="3rem"
-                        height="3rem"
-                        viewBox="0 0 512 512"
-                      >
-                        <path
-                          fill="white"
-                          d="M424.728 238.062H372.36v-25.698h-23.27v-57.11c27.94-10.27 51.778 7.986 57.238 28.501h18.396c36.144 1.67 35.935 52.391.005 54.307m-262.896 20.844l-7.112 48h31.458c43.163-2.37 41.945-62.115 0-64.001H165.38c-4.359-13.815-13.664-23.808-25.744-30.541v46.542zM477.81 127.891c-97.817-170.36-344.571-170.562-443.093-.36S59.13 511.84 255.468 512s320.158-213.747 222.341-384.109m-292.504 290.17l13.31-89.826l109.5-35.583l12.087 81.571zM302.542 212.36h-93.089v-67.292L256 115.985l46.542 29.083zm78.07 252.057l-30.444-205.51h22.192v-12.118h52.368c47.371-2.27 48.488-68.968 0-71.76H412.4c-11.324-24.836-36.23-36.766-63.311-29.045V119.27L256 61.09l-93.093 58.18v93.093h-7.166c-10.497-9.153-24.13-14.548-38.652-14.548c-79.36 3.586-77.547 115.074 0 117.817h36.338l1.293-8.727h-37.63c-65.873-2.109-66.989-97.736 0-100.363c8.313 0 15.496 2.096 22.547 5.82h16.09c6.733 5.87 12.19 13.267 15.735 21.815h14.717c54.427 2.926 53.97 79.34 0 81.455h-32.75L131.344 464.68C24.122 399.993-24.116 255.286 46.06 134.053c93.483-161.498 327.62-161.308 420.435.342c69.507 121.056 21.07 265.282-85.882 330.022"
-                        />
-                      </svg>
-                    </div>
-                    <div>
-                      <p>
-                        Google <br />
-                        Lighthouse
-                      </p>
-                    </div>
-                  </div>
+
                   <div class="skill">
                     <div class="svg-icon">
                       <svg
@@ -1171,12 +1138,6 @@
                     </div>
                     <div><p>Vercel</p></div>
                   </div>
-                  <div class="skill">
-                    <div class="svg-icon">
-                      <i class="bx bxl-netlify" aria-hidden="true"></i>
-                    </div>
-                    <div><p>Netlify</p></div>
-                  </div>
 
                   <div class="skill">
                     <div class="svg-icon">
@@ -1190,6 +1151,52 @@
                     </div>
                     <div><p>Windows</p></div>
                   </div>
+
+                  <div class="skill">
+                    <div class="svg-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="3rem"
+                        height="3rem"
+                        viewBox="0 0 512 512"
+                      >
+                        <path
+                          fill="white"
+                          d="m294.5 122l112.9 50.2L294.5 285zM79 500.6l199.2-199.2l-60.8-60.4zM0 11.4l284.9 283.2V114.4zm465.1 103h-164L512 208.2z"
+                        />
+                      </svg>
+                    </div>
+                    <div><p>Snap</p></div>
+                  </div>
+
+                  <div class="skill">
+                    <div class="svg-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="3rem"
+                        height="3rem"
+                        viewBox="0 0 24 24"
+                      >
+                        <path
+                          fill="white"
+                          d="M18.263.007c-3.121-.147-5.744 2.109-6.192 5.082c-.018.138-.045.272-.067.405c-.696 3.703-3.936 6.507-7.827 6.507a7.9 7.9 0 0 1-3.825-.979a.202.202 0 0 0-.302.178V24H12v-8.999c0-1.656 1.338-3 2.987-3h2.988c3.382 0 6.103-2.817 5.97-6.244c-.12-3.084-2.61-5.603-5.682-5.75"
+                        />
+                      </svg>
+                    </div>
+                    <div>
+                      <p>Render</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="skillSetPair">
+              <div class="skills-set">
+                <div class="h3-title">
+                  <h3>Cloud Services</h3>
+                </div>
+                <!-- ~ Emmet: div.skill>div.svg-icon+div>p -->
+                <div class="skill-items">
                   <div class="skill">
                     <div class="svg-icon">
                       <svg
@@ -1219,15 +1226,75 @@
                         xmlns="http://www.w3.org/2000/svg"
                         width="3rem"
                         height="3rem"
+                        viewBox="0 0 15 15"
+                      >
+                        <path
+                          fill="white"
+                          fill-rule="evenodd"
+                          d="M7.869.162a.5.5 0 0 0-.738 0l-2.63 2.87a5.5 5.5 0 0 0-.271 7.115L7 13.673V15h1v-1.327l2.77-3.526a5.5 5.5 0 0 0-.27-7.114zM8 3a.5.5 0 0 0-1 0v7.5a.5.5 0 0 0 1 0z"
+                          clip-rule="evenodd"
+                        />
+                      </svg>
+                    </div>
+                    <div>
+                      <p>
+                        Mongo <br />
+                        Atlas
+                      </p>
+                    </div>
+                  </div>
+                  <div class="skill">
+                    <div class="svg-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="3.75rem"
+                        height="3rem"
+                        viewBox="0 0 640 512"
+                      >
+                        <path
+                          fill="white"
+                          d="m407.906 319.913l-230.8-2.928a4.58 4.58 0 0 1-3.632-1.926a4.65 4.65 0 0 1-.494-4.147a6.14 6.14 0 0 1 5.361-4.076l232.94-2.936c27.631-1.26 57.546-23.574 68.022-50.784l13.286-34.542a7.9 7.9 0 0 0 .524-2.936a7.7 7.7 0 0 0-.164-1.631A151.91 151.91 0 0 0 201.257 198.4A68.12 68.12 0 0 0 94.2 269.59C41.924 271.106 0 313.728 0 366.12a96 96 0 0 0 1.029 13.958a4.51 4.51 0 0 0 4.445 3.871l426.1.051c.043 0 .08-.019.122-.02a5.61 5.61 0 0 0 5.271-4l3.273-11.265c3.9-13.4 2.448-25.8-4.1-34.9c-6.016-8.392-16.05-13.328-28.234-13.902m105.95-98.813c-2.141 0-4.271.062-6.391.164a3.77 3.77 0 0 0-3.324 2.653l-9.077 31.193c-3.9 13.4-2.449 25.786 4.1 34.89c6.02 8.4 16.054 13.323 28.238 13.9l49.2 2.939a4.49 4.49 0 0 1 3.51 1.894a4.64 4.64 0 0 1 .514 4.169a6.15 6.15 0 0 1-5.351 4.075l-51.125 2.939c-27.754 1.27-57.669 23.574-68.145 50.784l-3.695 9.606a2.716 2.716 0 0 0 2.427 3.68c.046 0 .088.017.136.017h175.91a4.69 4.69 0 0 0 4.539-3.37a124.8 124.8 0 0 0 4.682-34C640 277.3 583.524 221.1 513.856 221.1"
+                        />
+                      </svg>
+                    </div>
+                    <div>
+                      <p>Cloudflare Pages</p>
+                    </div>
+                  </div>
+                  <div class="skill">
+                    <div class="svg-icon">
+                      <i class="bx bxl-netlify" aria-hidden="true"></i>
+                    </div>
+                    <div><p>Netlify</p></div>
+                  </div>
+                </div>
+              </div>
+              <div class="skills-set">
+                <div class="h3-title">
+                  <h3>SEO Tools</h3>
+                </div>
+                <!-- ~ Emmet: div.skill>div.svg-icon+div>p -->
+                <div class="skill-items">
+                  <div class="skill">
+                    <div class="svg-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="3rem"
+                        height="3rem"
                         viewBox="0 0 512 512"
                       >
                         <path
                           fill="white"
-                          d="m294.5 122l112.9 50.2L294.5 285zM79 500.6l199.2-199.2l-60.8-60.4zM0 11.4l284.9 283.2V114.4zm465.1 103h-164L512 208.2z"
+                          d="M424.728 238.062H372.36v-25.698h-23.27v-57.11c27.94-10.27 51.778 7.986 57.238 28.501h18.396c36.144 1.67 35.935 52.391.005 54.307m-262.896 20.844l-7.112 48h31.458c43.163-2.37 41.945-62.115 0-64.001H165.38c-4.359-13.815-13.664-23.808-25.744-30.541v46.542zM477.81 127.891c-97.817-170.36-344.571-170.562-443.093-.36S59.13 511.84 255.468 512s320.158-213.747 222.341-384.109m-292.504 290.17l13.31-89.826l109.5-35.583l12.087 81.571zM302.542 212.36h-93.089v-67.292L256 115.985l46.542 29.083zm78.07 252.057l-30.444-205.51h22.192v-12.118h52.368c47.371-2.27 48.488-68.968 0-71.76H412.4c-11.324-24.836-36.23-36.766-63.311-29.045V119.27L256 61.09l-93.093 58.18v93.093h-7.166c-10.497-9.153-24.13-14.548-38.652-14.548c-79.36 3.586-77.547 115.074 0 117.817h36.338l1.293-8.727h-37.63c-65.873-2.109-66.989-97.736 0-100.363c8.313 0 15.496 2.096 22.547 5.82h16.09c6.733 5.87 12.19 13.267 15.735 21.815h14.717c54.427 2.926 53.97 79.34 0 81.455h-32.75L131.344 464.68C24.122 399.993-24.116 255.286 46.06 134.053c93.483-161.498 327.62-161.308 420.435.342c69.507 121.056 21.07 265.282-85.882 330.022"
                         />
                       </svg>
                     </div>
-                    <div><p>Snap</p></div>
+                    <div>
+                      <p>
+                        Google <br />
+                        Lighthouse
+                      </p>
+                    </div>
                   </div>
                   <div class="skill">
                     <div class="svg-icon">
@@ -1282,42 +1349,6 @@
                       >
                         <path
                           fill="white"
-                          d="M18.263.007c-3.121-.147-5.744 2.109-6.192 5.082c-.018.138-.045.272-.067.405c-.696 3.703-3.936 6.507-7.827 6.507a7.9 7.9 0 0 1-3.825-.979a.202.202 0 0 0-.302.178V24H12v-8.999c0-1.656 1.338-3 2.987-3h2.988c3.382 0 6.103-2.817 5.97-6.244c-.12-3.084-2.61-5.603-5.682-5.75"
-                        />
-                      </svg>
-                    </div>
-                    <div>
-                      <p>Render</p>
-                    </div>
-                  </div>
-                  <div class="skill">
-                    <div class="svg-icon">
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="3.75rem"
-                        height="3rem"
-                        viewBox="0 0 640 512"
-                      >
-                        <path
-                          fill="white"
-                          d="m407.906 319.913l-230.8-2.928a4.58 4.58 0 0 1-3.632-1.926a4.65 4.65 0 0 1-.494-4.147a6.14 6.14 0 0 1 5.361-4.076l232.94-2.936c27.631-1.26 57.546-23.574 68.022-50.784l13.286-34.542a7.9 7.9 0 0 0 .524-2.936a7.7 7.7 0 0 0-.164-1.631A151.91 151.91 0 0 0 201.257 198.4A68.12 68.12 0 0 0 94.2 269.59C41.924 271.106 0 313.728 0 366.12a96 96 0 0 0 1.029 13.958a4.51 4.51 0 0 0 4.445 3.871l426.1.051c.043 0 .08-.019.122-.02a5.61 5.61 0 0 0 5.271-4l3.273-11.265c3.9-13.4 2.448-25.8-4.1-34.9c-6.016-8.392-16.05-13.328-28.234-13.902m105.95-98.813c-2.141 0-4.271.062-6.391.164a3.77 3.77 0 0 0-3.324 2.653l-9.077 31.193c-3.9 13.4-2.449 25.786 4.1 34.89c6.02 8.4 16.054 13.323 28.238 13.9l49.2 2.939a4.49 4.49 0 0 1 3.51 1.894a4.64 4.64 0 0 1 .514 4.169a6.15 6.15 0 0 1-5.351 4.075l-51.125 2.939c-27.754 1.27-57.669 23.574-68.145 50.784l-3.695 9.606a2.716 2.716 0 0 0 2.427 3.68c.046 0 .088.017.136.017h175.91a4.69 4.69 0 0 0 4.539-3.37a124.8 124.8 0 0 0 4.682-34C640 277.3 583.524 221.1 513.856 221.1"
-                        />
-                      </svg>
-                    </div>
-                    <div>
-                      <p>Cloudflare Pages</p>
-                    </div>
-                  </div>
-                  <div class="skill">
-                    <div class="svg-icon">
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="3rem"
-                        height="3rem"
-                        viewBox="0 0 24 24"
-                      >
-                        <path
-                          fill="white"
                           d="M2.203 8.611H.857a.845.845 0 0 0-.841.841v.858a13 13 0 0 0-.016.6c0 6.627 5.373 12 12 12c6.527 0 11.837-5.212 11.996-11.701c0-.025.004-.05.004-.075V9.452a.845.845 0 0 0-.841-.841h-1.346c-1.159-4.329-5.112-7.521-9.805-7.521S3.363 4.282 2.203 8.611m18.444 0H3.37c1.127-3.702 4.57-6.399 8.638-6.399c4.069 0 7.512 2.697 8.639 6.399"
                         />
                       </svg>
@@ -1329,37 +1360,37 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="languages-skills">
-            <div class="h2-title">
-              <h2>Languages</h2>
-            </div>
-            <div class="languages-items">
-              <div class="language-item">
-                <div class="language-emoji"><p>&#127468;&#127463;</p></div>
-                <div class="h3-title">
-                  <h3>English</h3>
-                </div>
-                <div class="language-parameter english-parameter">
-                  <p>Fluent</p>
-                </div>
+            <div class="languages-skills">
+              <div class="h2-title">
+                <h2>Languages</h2>
               </div>
-              <div class="language-item">
-                <div class="language-emoji"><p>&#127465;&#127466;</p></div>
-                <div class="h3-title">
-                  <h3>German</h3>
+              <div class="languages-items">
+                <div class="language-item">
+                  <div class="language-emoji"><p>&#127468;&#127463;</p></div>
+                  <div class="h3-title">
+                    <h3>English</h3>
+                  </div>
+                  <div class="language-parameter english-parameter">
+                    <p>Fluent</p>
+                  </div>
                 </div>
-                <div class="language-parameter german-parameter">
-                  <p>upper-intermediate (B2)</p>
+                <div class="language-item">
+                  <div class="language-emoji"><p>&#127465;&#127466;</p></div>
+                  <div class="h3-title">
+                    <h3>German</h3>
+                  </div>
+                  <div class="language-parameter german-parameter">
+                    <p>upper-intermediate (B2)</p>
+                  </div>
                 </div>
-              </div>
-              <div class="language-item">
-                <div class="language-emoji"><p>&#127470;&#127473;</p></div>
-                <div class="h3-title">
-                  <h3>Hebrew</h3>
-                </div>
-                <div class="language-parameter hebrew-parameter">
-                  <p>Native</p>
+                <div class="language-item">
+                  <div class="language-emoji"><p>&#127470;&#127473;</p></div>
+                  <div class="h3-title">
+                    <h3>Hebrew</h3>
+                  </div>
+                  <div class="language-parameter hebrew-parameter">
+                    <p>Native</p>
+                  </div>
                 </div>
               </div>
             </div>
